UpdateQueue test